ec2.tf
resource "aws_instance" "webapp_ec2" {
  ami           = "ami-0c55b159cbfafe1f0"
  instance_type = "t3.micro"
  subnet_id     = aws_subnet.webapp_subnet.id
  security_groups = [aws_security_group.webapp_sg.name]
  user_data = <<-EOF
              #!/bin/bash
              echo '<h1>Static Website</h1>' > /var/www/html/index.html
              echo '<h1>API: ' > /var/www/html/api.html
              echo $HTTP_CLIENT_THUMBPRINT >> /var/www/html/api.html
              echo '</h1>' >> /var/www/html/api.html
              service httpd start
              EOF
}

resource "aws_secretsmanager_secret" "trust_store" {
  name = "ec2-trust-store"
}

resource "aws_secretsmanager_secret_version" "trust_store_version" {
  secret_id     = aws_secretsmanager_secret.trust_store.id
  secret_string = <<EOT
  -----BEGIN CERTIFICATE-----
  MIIDeDCCAmCgAwIBAgIUbKQGiXQs/ScfDI8e6x1Rdhb1H9IwDQYJKoZIhvcNAQEL
[...]
  gJC3gPKoorISZe58Fjx41VNpZOSCvFYRF9/vhA==
  -----END CERTIFICATE-----
  EOT
}
